force-app/main/default/objects/Company_Levels_snapshot__c/Company_Levels_snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores Company Levels snapshot</description>
    <label>Company Levels snapshot</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Company Levels snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Levels snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>