force-app/main/default/objects/Company_Levels_snapshot__c/fields/Certification_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Certification_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the corresponding certification snapshot.</description>
    <label>Certification Snapshot</label>
    <referenceTo>Certification_Snapshot__c</referenceTo>
    <relationshipLabel>Company Levels snapshots</relationshipLabel>
    <relationshipName>Company_Levels_snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>