force-app/main/default/objects/Company_Levels_snapshot__c/fields/Company_Level__c.field-meta.xml
<CustomField>
    <fullName>Company_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Level</label>
    <referenceTo>Company_Level__c</referenceTo>
    <relationshipLabel>Company Levels snapshots</relationshipLabel>
    <relationshipName>Company_Levels_snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>