force-app/main/default/objects/Company_Levels_snapshot__c/fields/Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Level_Name__c</fullName>
    <label>Level Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>