force-app/main/default/objects/Company_Levels_snapshot__c/fields/Level_Value__c.field-meta.xml
<CustomField>
    <fullName>Level_Value__c</fullName>
    <label>Level Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>