force-app/main/default/objects/Company_Levels_snapshot__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Company Levels snapshots</relationshipLabel>
    <relationshipName>Company_Levels_snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>