force-app/main/default/objects/Company_Levels_snapshot__c/fields/Sales_Rep_Profile_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the sales rep profile snapshot that the company level is associated with.</description>
    <label>Sales Rep Profile Snapshot</label>
    <referenceTo>Sales_Rep_Profile_Snapshot__c</referenceTo>
    <relationshipLabel>Company Levels snapshots</relationshipLabel>
    <relationshipName>Company_Levels_snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>