force-app/main/default/objects/Company_Levels_snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Rep_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>